--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-    {% assign name = site.title | split: ' ' %}
+    {% assign name = "dajijijiji" | split: ' ' %}
     {% assign firstname = name | first %}
     {% if name.size > 2 %}
        {% assign middlenames =  name | slice:1, name.size-1 | join:" " %}
