--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,16 +3,16 @@ layout: default
 ---
 
 <div class="post">
-
+  {% assign name = "Weijie Liu" | split: ' ' %}
+  {% assign firstname = name | first %}
+  {% if name.size > 2 %}
+     {% assign middlenames =  name | slice:1, name.size-1 | join:" " %}
+  {% else %}
+     {% assign middlenames = '' %}
+  {% endif %}
+  {% assign lastname = name | last %}
   <header class="post-header">
-    <!-- {% assign name = "dajijijiji" | split: ' ' %}
-    {% assign firstname = name | first %}
-    {% if name.size > 2 %}
-       {% assign middlenames =  name | slice:1, name.size-1 | join:" " %}
-    {% else %}
-       {% assign middlenames = '' %}
-    {% endif %}
-    {% assign lastname = name | last %} -->
+
     <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/">
      <span class="font-weight-bold">{{ firstname }}</span> {{ middlenames }}  {{ lastname }}
     </a>
