--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,9 +13,9 @@ layout: default
   {% assign lastname = name | last %}
   <header class="post-header">
     <!-- <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/"> -->
-    <a class="navbar-brand title font-weight-lighter">
+    <!-- <a class="navbar-brand title font-weight-lighter">
      <span class="font-weight-bold">{{ firstname }}</span> {{ middlenames }}  {{ lastname }}
-    </a>
+    </a> -->
   </header>
 
         <article>
