--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
           <!-- About -->
           <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
             <a class="nav-link" href="{{ '/' | relative_url }}">
-              about
+              About me
               {% if page.title == p.title %}
                 <span class="sr-only">(current)</span>
               {% endif %}
@@ -44,7 +44,7 @@
           <!-- Blog -->
           <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
             <a class="nav-link" href="{{ '/blog/' | relative_url }}">
-              blog
+              Blogs
               {% if page.title == p.title %}
               <span class="sr-only">(current)</span>
               {% endif %}
