--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
           <!-- About -->
           <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
             <a class="nav-link" href="{{ '/' | relative_url }}">
-              About me
+              About
               {% if page.title == p.title %}
                 <span class="sr-only">(current)</span>
               {% endif %}
